--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Intro to UX Design</li>
         </ul>
 <p>
-    <a href="certificates.html">Certificates</a>
+    <a href="personalPage/main/certificates.html">Certificates</a>
 </p>
     <h2>Current Courses</h2>
 
