--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Shane's Page</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="personalPage/main/css/styles.css">
 </head>
 <body>
 
@@ -24,7 +24,7 @@
             <li>Intro to UX Design</li>
         </ul>
 <p>
-    <a href="certificates.html">Certificates</a>
+    <a href="personalPage/main/certificates.html">Certificates</a>
 </p>
     <h2>Current Courses</h2>
 
