--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Shane's Page</title>
-    <link rel="stylesheet" href="personalPage/main/css/styles.css">
+    <link rel="stylesheet" href="persoanlPage/main/css/styles.css">
 </head>
 <body>
 
@@ -17,11 +17,11 @@
     <h2>Completed Courses</h2>
 
         <ul>
-            <li>Code Yourself!</li>
-            <li>Financials</li>
-            <li>Intro to Web Design</li>
-            <li>Intro to Python</li>
-            <li>Intro to UX Design</li>
+            <li>Code Yourself! An Introduction to Programming</li>
+            <li>Programming for Everybody</li>
+            <li>Introduction to HTML5</li>
+            <li>Introduction to CSS3</li>
+            <li>Foundations of User Experience Design</li>
         </ul>
 <p>
     <a href="personalPage/main/certificates.html">Certificates</a>
