--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
     <h2>Current Courses</h2>
 
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Python Data Structures
+                <br>
+                <progress value="45" max="100"></progress> 45%
+            </li>
+            <li>Interactivity with JavaScript
+                <br>
+                <progress value="7" max="100"></progress> 7%
+            </li>
+            <li>UX Design Process
+                <br>
+                <progress value="87" max="100"></progress> 87%
+            </li>
 
 
         </ul>
