--- a/personalPage/main/certificates.html
+++ b/personalPage/main/certificates.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-    <p>Eric's gay.</p>
+    <header>
+        <h1>Certificates</h1>
+    </header>
 
 
 
