--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <h1>Shane's Progress</h1>
 
     </header>
+<div>
+    <nav>
+        <p>
+            <a href="index.html" class = "active">Home</a>
+ 
+            <a href="personalPage/main/certificates.html">Certificates</a>
+
+
 
 <aside>
     
@@ -23,9 +31,7 @@
             <li>Introduction to CSS3</li>
             <li>Foundations of User Experience Design</li>
         </ul>
-<p>
-    <a href="personalPage/main/certificates.html">Certificates</a>
-</p>
+
     <h2>Current Courses</h2>
 
         <ul>
