--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <a href="index.html" class = "active">Home</a>
  
             <a href="personalPage/main/certificates.html">Certificates</a>
-
+        </p>
+    </nav>
+</div>    
 
 
 <aside>
