--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 <body>
 
     <header>
-        <h1>Shane's Progress</h1>
+        <h1>シェーン　ホフマン</h1>
 
     </header>
 <div>
     <nav>
         <p>
             <a href="index.html" class = "active">Home</a>
- 
+        </p>
+        <p>
             <a href="personalPage/main/certificates.html">Certificates</a>
         </p>
     </nav>
