--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="index.html" class = "active">Home</a>
         </p>
         <p>
-            <a href="personalPage/main/certificates.html">Certificates</a>
+            <a href="certificates.html">Certificates</a>
         </p>
     </nav>
 </div>    
