--- a/certificates.html
+++ b/certificates.html
@@ -10,7 +10,16 @@
         <h1>Certificates</h1>
     </header>
 
-
+<div>
+    <nav>
+        <p>
+            <a href="index.html"</a>
+        </p>
+        <p>
+            <a href="certificates.html" class = "active">Home>Certificates</a>
+        </p>
+    </nav>
+</div> 
 
 
 
