--- a/certificates.html
+++ b/certificates.html
@@ -13,10 +13,10 @@
 <div>
     <nav>
         <p>
-            <a href="index.html"</a>
+            <a href="index.html">Home</a>
         </p>
         <p>
-            <a href="certificates.html" class = "active">Home>Certificates</a>
+            <a href="certificates.html" "class = "active">Certificates</a>
         </p>
     </nav>
 </div> 
