--- a/certificates.html
+++ b/certificates.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Certificates</h1>
+        <h1>シェーン　ホフマン</h1>
     </header>
 
 <div>
@@ -16,11 +16,16 @@
             <a href="index.html">Home</a>
         </p>
         <p>
-            <a href="certificates.html" "class = "active">Certificates</a>
+            
+            <a href="certificates.html" class = "active">Certificates</a>
         </p>
     </nav>
 </div> 
 
+<main>
+    <p>
+        This will display certificate pictures
+    </p>
 
 
 
@@ -28,8 +33,11 @@
 
 
 
+<footer>
 
-
+<p>For questions I can be reached at this <a href="mailto:shoffy72@gmail.com?subject=Reaching%20Out&body=How%20are%20you">email</a>.
+</p>
+</footer>
 
 
 
