--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
 
     </header>
 <div>
+    <span>
     <nav>
         <p>
             <a href="index.html" class = "active">Home</a>
-        </p>
+
+    </span>
+<!--    <span class="second">
+        HOME
+    </span>
+-->
         <p>
             <a href="certificates.html">Certificates</a>
         </p>
     </nav>
 </div>    
-
 
 <aside>
     
@@ -56,7 +61,7 @@
 </aside>
 
 
-<main>
+<main class ="index">
 
         <div>
     
