--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
     <nav>
         <p>
             <a href="index.html" class = "active">Home</a>
-
-    </span>
-<!--    <span class="second">
-        HOME
-    </span>
--->
         <p>
             <a href="certificates.html">Certificates</a>
         </p>
+        <p>
+            <a href="nascarLeague.html">Nascar League Standings</>
+                </p>
     </nav>
 </div>    
 
