--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="certificates.html">Certificates</a>
         </p>
         <p>
-            <a href="nascarLeague.html">Nascar League Standings</>
+            <a href="nascarLeague.html">Nascar League Standings</a>
                 </p>
     </nav>
 </div>    
