--- a/nascarLeague.html
+++ b/nascarLeague.html
@@ -6,6 +6,24 @@
     <link rel="stylesheet" href="personalPage/main/css/styles.css">
 </head>
 <body>
+    
+
+    <header>
+        <h1>シェーン　ホフマン</h1>
+    </header>
+    <div>
+    <span>
+    <nav>
+        <p>
+            <a href="index.html">Home</a>
+        <p>
+            <a href="certificates.html">Certificates</a>
+        </p>
+        <p>
+            <a href="nascarLeague.html" class = "active">Nascar League Standings</a>
+                </p>
+    </nav>
+</div> 
 
 <table>
 <tr><th>Name</th><th>Points</th></tr>
