--- a/certificates.html
+++ b/certificates.html
@@ -16,8 +16,10 @@
             <a href="index.html">Home</a>
         </p>
         <p>
-            
             <a href="certificates.html" class = "active">Certificates</a>
+        </p>
+        <p>
+            <a href="nascarLeague.html">Nascar League Standings</a>
         </p>
     </nav>
 </div> 
