--- a/index.html
+++ b/index.html
@@ -35,23 +35,27 @@
             <li>Introduction to HTML5</li>
             <li>Introduction to CSS3</li>
             <li>Foundations of User Experience Design</li>
+            <li>Python Data Structures</li>
         </ul>
 
     <h2>Current Courses</h2>
 
         <ul>
-            <li>Python Data Structures
+            <li>Web Data With Python
                 <br>
-                <progress value="45" max="100"></progress> 45%
+                <progress value="53" max="100"></progress> 53%
             </li>
             <li>Interactivity with JavaScript
                 <br>
-                <progress value="7" max="100"></progress> 7%
+                <progress value="51" max="100"></progress> 51%
             </li>
-            <li>UX Design Process
+            <li>Goodle IT Automation
                 <br>
-                <progress value="87" max="100"></progress> 87%
+                <progress value="54" max="100"></progress> 54%
             </li>
+            <li>Google IT Support
+                <br>
+                <progress value="27" max="100"></progress> 27%
 
 
         </ul>
