--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
             <p>This is a log and forever changing example of my progress through web design and programming</p>
 
             <p>This text should be red</p>
-
+            
+            <p>
+                <a href="https://www.youtube.com/channel/UCvcReXEGsTodzBna2bO8Vow">YouTube</a>
+            </p>
         </div>
 
 
