--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3>Silver Falls</h3>
         <p>
             Made a trip to Silver Falls in Entiat on June 26.
-            <img src="silverFalls.jpg">
+            <img src="personalPage/main/imgs/silverFalls.jpg">
         </p>
     </div>
 
