--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <h2>Log</h2>
 
             <p>This is a log and forever changing example of my progress through web design and programming</p>
-
+<!-- Saving this just for the "nth child" to remember later
             <p>This text should be red</p>
-            
+-->            
             <p>
                 <a href="https://www.youtube.com/channel/UCvcReXEGsTodzBna2bO8Vow">YouTube</a>
             </p>
