--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
         <p>
             Made a trip to Silver Falls in Entiat on June 26.
             <img src="personalPage/main/imgs/silverFalls.jpg">
+            Not very busy and the weather was great, it's about 30 miles up the Entiat River.
+        </p>
+        
+        <h3>Canyon Crest</h3>
+        <p>Canyon Crest is a nice little trail just outside of Leavenworth.  We saw a bear right before the parking spot but wasn't quick enough to get a photo as our car scared it away.
         </p>
     </div>
 
