--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
         </p>
         
         <h3>Canyon Crest</h3>
-        <p>Canyon Crest is a nice little trail just outside of Leavenworth.  We saw a bear right before the parking spot but wasn't quick enough to get a photo as our car scared it away.
+        <p>Canyon Crest is a nice little trail just outside of Leavenworth.
+            <img src="personalPage/main/imgs/backOfGfsHead.jpg">
+            We saw a bear right before the parking spot but wasn't quick enough to get a photo as our car scared it away.  Accidently snuck up on a few deer too.
+            <img src="personalPage/main/imgs/deerButt.jpg" alt="A deer's butt">
         </p>
     </div>
 
