--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@
     <h2 class ="japanese">日本語</h2>
     <ul>
         <li>N5 Kanji
-             <br>
-                <progress value="30" max="80"></progress> 30/80
+<div class="progress"> 
+  <div class="progress__bar"></div>
+</div> 30/80
         </li>
         <li>N5 Vocabulary
-             <br>
-                <progress value="90" max="700"></progress> 90/700
+<div class="progress"> 
+  <div class="progress__bar"></div>
+</div> 90/700
         </li>
         <li>N5 Grammar
-             <br>
-                <progress value="42" max="84"></progress> 42/84
+<div class="progress"> 
+  <div class="progress__bar"></div>
+</div> 42/84
         </li>
             
     
