--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
     <ul>
         <li>N5 Kanji
 <div class="progress"> 
-  <div class="progress__bar"></div>
+  <div class="progress__bar1"></div>
 </div> 30/80
         </li>
         <li>N5 Vocabulary
 <div class="progress"> 
-  <div class="progress__bar"></div>
+  <div class="progress__bar2"></div>
 </div> 90/700
         </li>
         <li>N5 Grammar
 <div class="progress"> 
-  <div class="progress__bar"></div>
+  <div class="progress__bar3"></div>
 </div> 42/84
         </li>
             
