--- a/certificates.html
+++ b/certificates.html
@@ -25,8 +25,9 @@
 </div> 
 
 <main>
+    <h2>HTML5 Introduction</h2>
     <p>
-        This will display certificate pictures
+        <img src="personalPage/main/imgs/htmlCert.pdf"
     </p>
 
 
