--- a/certificates.html
+++ b/certificates.html
@@ -27,7 +27,7 @@
 <main>
     <h2>HTML5 Introduction</h2>
     <p>
-        <img src="personalPage/main/imgs/htmlCert.pdf"
+        <img src="personalPage/main/imgs/htmlCert.pdf">
     </p>
 
 
