--- a/certificates.html
+++ b/certificates.html
@@ -27,6 +27,8 @@
 <main>
     <h2>HTML5 Introduction</h2>
     <p>
+         <iframe src="personalPage/main/imgs/htmlCert.pdf#toolbar=0" width="100%" height="500px">
+    </iframe>
         <img src="personalPage/main/imgs/htmlCert.pdf">
     </p>
 
