--- a/certificates.html
+++ b/certificates.html
@@ -27,7 +27,7 @@
 <main>
     <h2>HTML5 Introduction</h2>
     <p>
-         <iframe src="personalPage/main/imgs/htmlCert.pdf#toolbar=0" width="100%" height="500px">
+         <iframe src="personalPage/main/imgs/htmlCert.pdf#toolbar=0" width="100%" height="100%">
     </iframe>
         <img src="personalPage/main/imgs/htmlCert.pdf">
     </p>
