--- a/certificates.html
+++ b/certificates.html
@@ -29,7 +29,7 @@
     <p>
          <iframe src="personalPage/main/imgs/htmlCert.pdf#toolbar=0" width="100%" height="100%">
     </iframe>
-        <img src="personalPage/main/imgs/htmlCert.pdf">
+        <img src="personalPage/main/imgs/htmlCert.pdf" alt="HTML5 Introduction Certification>
     </p>
 
 
