--- a/certificates.html
+++ b/certificates.html
@@ -27,9 +27,12 @@
 <main>
     <h2>HTML5 Introduction</h2>
     <p>
-         <iframe src="personalPage/main/imgs/htmlCert.pdf#toolbar=0" width="100%" height="500px">
-    </iframe>
+        <!-- <iframe src="personalPage/main/imgs/htmlCert.pdf#toolbar=0" width="100%" height="500px">
+    </iframe> -->
         <img src="personalPage/main/imgs/htmlCert.pdf" alt="HTML5 Introduction Certification">
+        <br>
+        <img src="personalPage/main/imgs/cssIntroCert.pdf" alt="CSS3 Introduction Certification">
+        
     </p>
 
 
