--- a/certificates.html
+++ b/certificates.html
@@ -30,9 +30,11 @@
         <!-- <iframe src="personalPage/main/imgs/htmlCert.pdf#toolbar=0" width="100%" height="500px">
     </iframe> -->
         <img src="personalPage/main/imgs/htmlCert.pdf" alt="HTML5 Introduction Certification">
-        <br>
+    </p>
+    
+    <h2>CSS3 Introduction</h2>
+    <p>
         <img src="personalPage/main/imgs/cssIntroCert.pdf" alt="CSS3 Introduction Certification">
-        
     </p>
 
 
