--- a/certificates.html
+++ b/certificates.html
@@ -36,8 +36,16 @@
     <p>
         <img src="personalPage/main/imgs/cssIntroCert.pdf" alt="CSS3 Introduction Certification">
     </p>
-
-
+    
+    <h2>Foundations of User Experience Design</h2>
+    <p>
+        <img src="personalPage/main/imgs/uxFoundations.pdf" alt="Foundations of UX Design">
+    </p>
+    
+    <h2>Python Data structures</h2>
+    <p>
+        <img src="personalPage/main/imgs/pythonDataStructCert.pdf" alt="Python Data Sructures">
+    </p>
 
 </body>
 
