--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Shane's Page</title>
     <link rel="stylesheet" href="personalPage/main/css/styles.css">
+    <script src="personalPage/main/js/external.js">
+    </script>
 </head>
 <body>
 
@@ -93,7 +95,7 @@
             <p>This text should be red</p>
 -->            
             <p>
-                <a href="https://www.youtube.com/channel/UCvcReXEGsTodzBna2bO8Vow">YouTube</a>
+                <a onclick = "displayId(this)" id = "youtubelink" href="https://www.youtube.com/channel/UCvcReXEGsTodzBna2bO8Vow">YouTube</a>
             </p>
         </div>
     <div>
