--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="personalPage/main/js/external.js">
     </script>
 </head>
-<body>
+<body onload="setDate()">
 
     <header>
         <h1 class="japanese">シェーン　ホフマン</h1>
@@ -128,7 +128,11 @@
 </main>
 
 
-
+<footer>
+    <p> The current date is <span id = "date"></span>
+    </p>
+    </footer>
+    
 
 
 
