--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
 <footer>
     <p> The current date is <span id = "date"></span>
     </p>
+    <p>For questions I can be reached at this <a href="mailto:shaneouxd@icloud.com?subject=Reaching%20Out&body=How%20are%20you">email</a>.
+</p>
     </footer>
     
 
