--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <footer>
     <p> The current date is <span id = "date"></span>
     </p>
-    <p>For questions I can be reached at this <a href="mailto:shaneouxd@icloud.com?subject=Reaching%20Out&body=How%20are%20you">email</a>.
+    <p>For questions I can be reached at this <a href="mailto:shanehouxd@icloud.com?subject=Reaching%20Out&body=How%20are%20you">email</a>.
 </p>
     </footer>
     
