--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onload="setDate()">
 
     <header>
-        <h1 class="japanese">シェーン　ホフマン</h1>
+        <h1 id="japanese" onmouseover = "showEnglish(this)" onmouseleave = "showJapanese(this)" >シェーン　ホフマン</h1>
 
     </header>
 <div>
@@ -60,7 +60,7 @@
                 <progress value="27" max="100"></progress> 27%
         </ul>
     
-    <h2 class ="japanese">日本語</h2>
+    <h2>日本語</h2>
     <ul>
         <li>N5 Kanji
 <div class="progress"> 
