--- a/index.html
+++ b/index.html
@@ -120,6 +120,18 @@
             <img src="personalPage/main/imgs/deerButt.jpg" alt="A deer's butt">
         </p>
     </div>
+    <div>
+        <h2>Japanese Sentences For Practice</h2>
+        <br>
+        <ul>
+            <li>
+                コンビニで唐揚げをかいました。
+                <br>
+                I bought friend chicken at the convenience store.
+            </li>
+        </ul>
+    </div>
+    
 
     
  
