--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
     <div>
         <h2>Recent Hikes</h2>
         
-        <h3>Silver Falls</h3>
+        <summary>Silver Falls</summary>
+        <details>
         <p>
             Made a trip to Silver Falls in Entiat on June 26.
         <br>
@@ -108,8 +109,10 @@
             <br>
             Not very busy and the weather was great, it's about 30 miles up the Entiat River.
         </p>
+        </details>
         
-        <h3>Canyon Crest</h3>
+        <summary>Canyon Crest</summary>
+        <details>
         <p>Canyon Crest is a nice little trail just outside of Leavenworth.
             <br>
             <img src="personalPage/main/imgs/backOfGfsHead.jpg">
@@ -118,6 +121,7 @@
             <br>
             <img src="personalPage/main/imgs/deerButt.jpg" alt="A deer's butt">
         </p>
+        </details>
     </div>
     <!--
     <div>
