--- a/nascarLeague.html
+++ b/nascarLeague.html
@@ -28,42 +28,24 @@
 <aside>
 <table>
 <tr><th>Name</th><th>Points</th></tr>
-<tr><td>Chloe</td><td>
-410</td></tr>
-<tr><td>Ashley</td><td>
-438</td></tr>
-<tr><td>Rod</td><td>
-462</td></tr>
-<tr><td>Cori</td><td>
-465</td></tr>
-<tr><td>Mark</td><td>
-466</td></tr>
-<tr><td>Jordan</td><td>
-499</td></tr>
-<tr><td>Jon</td><td>
-502</td></tr>
-<tr><td>Greg</td><td>
-508</td></tr>
-<tr><td>Becky</td><td>
-524</td></tr>
-<tr><td>Adam</td><td>
-530</td></tr>
-<tr><td>Blake</td><td>
-537</td></tr>
-<tr><td>Dave</td><td>
-538</td></tr>
-<tr><td>Nonie</td><td>
-547</td></tr>
-<tr><td>Jeff</td><td>
-547</td></tr>
-<tr><td>Jennifer</td><td>
-552</td></tr>
-<tr><td>Shane</td><td>
-587</td></tr>
-<tr><td>Stacey</td><td>
-652</td></tr>
-<tr><td>Chad</td><td>
-679</td></tr>
+<tr><td>Chloe</td><td>444</td></tr>
+<tr><td>Ashley</td><td>466</td></tr>
+<tr><td>Mark</td><td>483</td></tr>
+<tr><td>Rod</td><td>496</td></tr>
+<tr><td>Cori</td><td>499</td></tr>
+<tr><td>Jon</td><td>517</td></tr>
+<tr><td>Greg</td><td>525</td></tr>
+<tr><td>Jordan</td><td>543</td></tr>
+<tr><td>Becky</td><td>559</td></tr>
+<tr><td>Jeff</td><td>566</td></tr>
+<tr><td>Adam</td><td>570</td></tr>
+<tr><td>Nonie</td><td>581</td></tr>
+<tr><td>Blake</td><td>582</td></tr>
+<tr><td>Jennifer</td><td>587</td></tr>
+<tr><td>Dave</td><td>597</td></tr>
+<tr><td>Shane</td><td>617</td></tr>
+<tr><td>Stacey</td><td>691</td></tr>
+<tr><td>Chad</td><td>723</td></tr>
 </table>
         </aside>
         
