adding first shortcut

--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ Google IT Automation
 
     <div>
 <h2>Shortcuts</h2>
+        <p>These are some shortcuts for iphone I made to practice some things like regular expressions and also just using the shortcuts app.</p>
+        <ul>
+            <li>
+                Simply returns the current f1 standings <br>
+                <a href="https://www.icloud.com/shortcuts/10dd820294b14c8ab0327b0984f1d107">f1Standings</a>
+            </li>
+        </ul>
 </div>
  
 
