--- a/index.html
+++ b/index.html
@@ -149,8 +149,12 @@ Google IT Automation
         <p>These are some shortcuts for iphone I made to practice some things like regular expressions and also just using the shortcuts app.</p>
         <ul>
             <li>
-                Simply returns the current f1 standings <br>
-                <a href="https://www.icloud.com/shortcuts/10dd820294b14c8ab0327b0984f1d107">f1Standings</a>
+                <a href="https://www.icloud.com/shortcuts/10dd820294b14c8ab0327b0984f1d107">f1Standings</a> <br>
+                Simply returns the current f1 standings
+            </li>
+            <li>
+                <a href="https://www.icloud.com/shortcuts/e4920c28a2ce4326b489e0203c64e3ae">upcomingWeek</a> <br>
+                Gets the next week of calender events and daily weather to send in a weekly email update
             </li>
         </ul>
 </div>
