Put list divs into a div
#noice

--- a/nascarLeague.html
+++ b/nascarLeague.html
@@ -51,6 +51,7 @@
         
         <main class ="log">
 <div class="lists">
+    <div class="lists">
 
 <h2>Recent Races</h2>
 <ul>
@@ -93,7 +94,8 @@
         <li>Alex Bowman
         </li>
     </ol>
-            
+            </div>
+</div>
         </main>
 </body>
 </html>
