--- a/index.html
+++ b/index.html
@@ -158,7 +158,12 @@ Google IT Automation
             </li>
         </ul>
 </div>
- 
+<div>
+<h2>Kombucha‼️</h2>
+<p>
+New kombucha section...
+</p>
+</div>
 
 
 </main>
