--- a/nascarLeague.html
+++ b/nascarLeague.html
@@ -51,7 +51,7 @@
         
         <main class="nascar">
 <div class="lists">
-    <div>
+    <div class="lists">
 
 <h2>Recent Races</h2>
 <ul>
@@ -61,7 +61,7 @@
     <li>Toyota / Save Mart 350</li>
     </ul>
 </div>
-<div>
+<div class="lists">
     <h2>Top Drivers by Points</h2>
     <ol>
         <li>Chase Elliott
