--- a/nascarLeague.html
+++ b/nascarLeague.html
@@ -87,7 +87,7 @@
 </div>
         </main>
 <footer>
-<p>This page was last edited on...</p>
+<p>This page was last edited on <p id="mod"></p></p>
 </footer>
 </body>
 </html>
