--- a/nascarLeague.html
+++ b/nascarLeague.html
@@ -87,7 +87,15 @@
 </div>
         </main>
 <footer>
-<p>This page was last edited on <p id="mod"></p></p>
+
+<p>This page was last updated on</p>
+<p id="demo"></p>
+
+<script>
+const date = new Date(document.lastModified);
+document.getElementById("demo").innerHTML = date;
+</script>
+
 </footer>
 </body>
 </html>
