--- a/nascarLeague.html
+++ b/nascarLeague.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Shane's Page</title>
     <link rel="stylesheet" href="personalPage/main/css/styles.css">
+    <script src="personalPage/main/js/external.js">
+    </script>
 </head>
 <body onLoad="setMod">
     
