--- a/nascarLeague.html
+++ b/nascarLeague.html
@@ -7,7 +7,7 @@
     <script src="personalPage/main/js/external.js">
     </script>
 </head>
-<body onLoad="setMod">
+<body>
     
 
     <header>
@@ -88,7 +88,7 @@
             </div>
 </div>
         </main>
-<footer>
+<footer onLoad="setMod">
 
 <p>This page was last updated on</p>
 <p id="mod"></p>
