--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="certificates.html">Certificates</a>
         </p>
         <p>
-            <a href="nascarLeague.html">Nascar League Standings</a>
+            <a href="nascar-league.html">Nascar League Standings</a>
                 </p>
     </nav>
 </div>    
