--- a/certificates.html
+++ b/certificates.html
@@ -47,6 +47,11 @@
         <img src="personalPage/main/imgs/pythonDataStructCert.pdf" alt="Python Data Sructures">
     </p>
 
+    <h2>Introduction to Github and Visual Sudio Code</h2>
+    <p>
+        <img src="personalPage/main/imgs/git-intro-cert.pdf" alt="Intro to Git & VS Code">
+    </p>
+
 </body>
 
 
