--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 </div>
 
 <aside>
-
     <h2>Recent Courses</h2>
-
         <ul>
             <li>Python Crash Course Google</li>
             <li>Programming for Everybody</li>
@@ -39,32 +37,13 @@
             <li>Foundations of User Experience Design</li>
             <li>Python Data Structures</li>
         </ul>
-
     <h2>Current Courses</h2>
-
         <ul>
-            <li>Web Data With Python
-                <br>
-                <progress value="53" max="100"></progress> 53%
-            </li>
-            <li>Interactivity with JavaScript
-                <br>
-                <progress value="51" max="100"></progress> 51%
-            </li>
-<li>
-Google IT Automation
-<br>
-<progress value="25" max="100"></progress> 25%
-</li>
-
-
-
-            <li>Google IT Support
-                <br>
-                <progress value="27" max="100"></progress> 27%
-</li>
+            <li>Web Data With Python<br><progress value="53" max="100"></progress> 53%</li>
+            <li>Interactivity with JavaScript<br><progress value="51" max="100"></progress> 51%</li>
+            <li>Google IT Automation<br><progress value="25" max="100"></progress> 25%</li>
+            <li>Google IT Support<br><progress value="27" max="100"></progress> 27%</li>
         </ul>
-
     <h2>日本語</h2>
     <ul>
         <li>N5 Kanji
@@ -83,11 +62,7 @@ Google IT Automation
 </div> 42/84
         </li>
 
-
-
-
 </aside>
-
 
 <main class ="log">
 
@@ -165,9 +140,7 @@ New kombucha section...
 </p>
 </div>
 
-
 </main>
-
 
 <footer>
     <p> The current date is <span id = "date"></span>
@@ -175,9 +148,6 @@ New kombucha section...
     <p>For questions I can be reached at this <a href="mailto:shanehouxd@icloud.com?subject=Reaching%20Out&body=How%20are%20you">email</a>.
 </p>
     </footer>
-
-
-
 
 </body>
 </html>
