--- a/index.html
+++ b/index.html
@@ -65,15 +65,12 @@
 </aside>
 
 <main class ="log">
-
         <div>
-
             <h2>Log</h2>
-
             <p>This is a log and forever changing example of my progress through web design and programming</p>
 <!-- Saving this just for the "nth child" to remember later
-            <p>This text should be red</p>
--->
+            <p>This text should be red</p> -->
+
             <p>
                 <a onclick = "displayId(this)" id = "youtubelink" href="https://www.youtube.com/channel/UCvcReXEGsTodzBna2bO8Vow">YouTube</a>
             </p>
