--- a/certificates.html
+++ b/certificates.html
@@ -19,7 +19,7 @@
             <a href="certificates.html" class = "active">Certificates</a>
         </p>
         <p>
-            <a href="nascarLeague.html">Nascar League Standings</a>
+            <a href="nascar-league.html">Nascar League Standings</a>
         </p>
     </nav>
 </div> 
