--- a/nascar-league.html
+++ b/nascar-league.html
@@ -98,7 +98,7 @@
 </div>
 
         </main>
-<footer onLoad="setMod">
+<footer onLoad="setMod()">
 
 <p>This page was last updated on</p>
 <span id="mod"></span>
